Fix T86170: Memory leak clearing the Python instance for COW id data

As Python can access COW ID's, ensure it's instance is kept on update.

This could happen when the "Use Self" argument was enabled for a driver.